feat: implement skeleton UI for feed layout

--- a/Breaking/app/src/main/res/layout/skeleton_item_post_list.xml
+++ b/Breaking/app/src/main/res/layout/skeleton_item_post_list.xml
@@ -9,8 +9,7 @@
         android:id="@+id/img_btn_post_more_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/image_button_click_background"
-        android:src="@drawable/ic_baseline_more_horiz_24"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45" />
@@ -20,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:background="@drawable/ic_baseline_thumb_up_alt_24"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,20 +32,21 @@
         android:id="@+id/imgv_post_thumbnail"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@drawable/skeleton_background"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.96"
+        app:layout_constraintHeight_percent="0.97"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgv_post_thumbnail"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.29" />
+        app:layout_constraintWidth_percent="0.28" />
 
     <ImageView
         android:id="@+id/imgv_post_location_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/ic_baseline_location_on_24"
+        android:background="@drawable/skeleton_background"
         app:layout_constraintBottom_toBottomOf="@id/tv_post_time"
         app:layout_constraintLeft_toLeftOf="@id/tv_post_title"
         app:layout_constraintTop_toTopOf="@id/tv_post_time"
@@ -57,7 +57,7 @@
         android:id="@+id/imgv_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_baseline_comment_24"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/img_btn_post_like"
         app:layout_constraintHorizontal_bias="0.993"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -65,18 +65,18 @@
         app:layout_constraintTop_toTopOf="@id/img_btn_post_like" />
 
     <TextView
+
         android:id="@+id/tv_chip_exclusive"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="6dp"
-        android:background="@drawable/chip_post_exclusive_background"
+        android:background="@drawable/skeleton_background"
         android:gravity="center"
         android:paddingStart="8dp"
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:text="@string/exclusive_string"
         android:textColor="@color/white"
         android:textSize="9sp"
         android:textStyle="bold"
@@ -86,7 +86,8 @@
         app:layout_constraintLeft_toLeftOf="@id/tv_post_price"
         app:layout_constraintRight_toLeftOf="@id/tv_chip_sold"
         app:layout_constraintTop_toBottomOf="@id/tv_post_price"
-        app:layout_constraintVertical_bias="0" />
+        app:layout_constraintVertical_bias="0"
+        app:layout_constraintWidth_percent="0.4" />
 
     <TextView
         android:id="@+id/tv_chip_sold"
@@ -94,16 +95,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:layout_marginEnd="6dp"
-        android:background="@drawable/chip_post_sold_background"
         android:gravity="center"
         android:paddingStart="8dp"
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:text="@string/sold_string"
         android:textColor="@color/white"
         android:textSize="9sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toRightOf="@id/tv_chip_exclusive"
         app:layout_constraintRight_toLeftOf="@id/tv_chip_unsold"
@@ -114,16 +114,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
-        android:background="@drawable/chip_post_unsold_background"
         android:gravity="center"
         android:paddingStart="8dp"
         android:paddingTop="2dp"
         android:paddingEnd="8dp"
         android:paddingBottom="2dp"
-        android:text="@string/is_selling_string"
         android:textColor="@color/breaking_color"
         android:textSize="9sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/tv_chip_sold"
         app:layout_constraintRight_toLeftOf="@id/img_btn_post_like"
@@ -133,6 +132,7 @@
         android:id="@+id/tv_post_nickname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/skeleton_background"
         android:ellipsize="end"
         android:textColor="@color/black"
         android:textSize="10sp"
@@ -152,6 +152,7 @@
         android:text="@string/vertical_divider_string"
         android:textColor="@color/black"
         android:textSize="10sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_post_time"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintLeft_toRightOf="@id/tv_post_time"
@@ -184,11 +185,12 @@
         android:id="@+id/tv_post_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/skeleton_background"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/black"
         android:textSize="13.5sp"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.55"
         app:layout_constraintLeft_toRightOf="@id/imgv_post_thumbnail"
         app:layout_constraintRight_toLeftOf="@id/img_btn_post_more_menu"
         app:layout_constraintTop_toTopOf="parent"
@@ -222,6 +224,7 @@
         android:text="@string/dot_divider"
         android:textColor="@color/black"
         android:textSize="14sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_post_location"
         app:layout_constraintLeft_toRightOf="@id/tv_post_location"
         app:layout_constraintRight_toLeftOf="@id/tv_post_time"
@@ -229,8 +232,9 @@
 
     <TextView
         android:id="@+id/tv_post_price"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/skeleton_background"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -239,5 +243,6 @@
         app:layout_constraintLeft_toLeftOf="@id/tv_post_title"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_post_nickname"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.15"
+        app:layout_constraintWidth_percent="0.2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
