--- a/Breaking/app/src/main/res/drawable/image_button_click_background.xml
+++ b/Breaking/app/src/main/res/drawable/image_button_click_background.xml
@@ -10,7 +10,7 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="80dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="#00FFFFFF" />
         </shape>
     </item>
 </selector>
