style: add designs for search activity

--- a/Breaking/app/src/main/res/values/colors.xml
+++ b/Breaking/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#EBE4E4</color>
-    <color name="real_gray">#aaaaaa</color>
-    <color name="light_gray">#dddddd</color>
+    <color name="real_gray">#cccccc</color>
+    <color name="light_gray">#eeeeee</color>
     <color name="breaking_color">#014D91</color>
     <color name="breaking_drawer_color">#2D375B</color>
     <color name="breaking_bottom_clicked_color">#FF9800</color>
