--- a/Breaking/app/src/main/res/drawable/main_search_background.xml
+++ b/Breaking/app/src/main/res/drawable/main_search_background.xml
@@ -9,7 +9,7 @@
     <item android:state_pressed="false">
         <shape>
             <corners android:radius="6dip" />
-            <solid android:color="@color/search_background_color" />
+            <solid android:color="@color/light_gray" />
         </shape>
     </item>
 </selector>
