--- a/Breaking/app/src/main/res/layout/fragment_navi_user.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_user.xml
@@ -90,8 +90,8 @@
             app:layout_constraintBottom_toBottomOf="@id/img_view_my_page_profile"
             app:layout_constraintLeft_toLeftOf="@id/tv_my_page_nickname"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/img_view_my_page_profile"
-            app:layout_constraintVertical_bias="0.6" />
+            app:layout_constraintTop_toBottomOf="@id/tv_my_page_nickname"
+            app:layout_constraintVertical_bias="0.2" />
 
         <TextView
             android:id="@+id/tv_follow_title"
