--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -53,9 +53,9 @@
             android:inputType="none"
             android:focusable="false"
             android:clickable="true"
+            android:padding="3dp"
             android:background="@drawable/main_search_background"
             android:textSize="13sp"
-            android:hint="@string/search"
             app:layout_constraintBottom_toBottomOf="@id/imgv_main_logo"
             app:layout_constraintHeight_percent="0.05"
             app:layout_constraintHorizontal_bias="0.85"
@@ -205,7 +205,7 @@
             android:theme="@style/FormButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.06"
+            app:layout_constraintHeight_percent="0.055"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.98"
