style: add backgrounds for finance page

--- a/Breaking/app/src/main/res/drawable/text_click_background.xml
+++ b/Breaking/app/src/main/res/drawable/text_click_background.xml
@@ -8,6 +8,7 @@
     <item android:state_pressed="false">
         <shape>
             <solid android:color="@color/white" />
+            <stroke android:width="0.03dp" />
         </shape>
     </item>
 </selector>
