--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -50,11 +50,11 @@
             android:id="@+id/et_search_bar"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:inputType="none"
-            android:focusable="false"
-            android:clickable="true"
-            android:padding="3dp"
             android:background="@drawable/main_search_background"
+            android:clickable="true"
+            android:focusable="false"
+            android:inputType="none"
+            android:padding="3dp"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/imgv_main_logo"
             app:layout_constraintHeight_percent="0.05"
@@ -63,6 +63,30 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/imgv_main_logo"
             app:layout_constraintWidth_percent="0.6" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider"
+            app:layout_constraintVertical_bias="0.05">
+
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/srl_main_feed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_main_feed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:scrollbarAlwaysDrawVerticalTrack="true"
+                    android:scrollbarSize="5dp"
+                    android:scrollbars="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+        </FrameLayout>
 
         <ImageView
             android:id="@+id/imgv_search_icon"
@@ -148,19 +172,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/hashtag_top_divider" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_main_feed"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:overScrollMode="never"
-            android:scrollbarAlwaysDrawVerticalTrack="true"
-            android:scrollbarSize="5dp"
-            android:scrollbars="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider"
-            app:layout_constraintVertical_bias="0.05" />
 
         <com.facebook.shimmer.ShimmerFrameLayout
             android:id="@+id/sfl_post_list_skeleton"
