--- a/Breaking/app/src/main/res/layout/custom_post_detail_content_popup.xml
+++ b/Breaking/app/src/main/res/layout/custom_post_detail_content_popup.xml
@@ -132,7 +132,7 @@
             android:clickable="true"
             android:orientation="horizontal"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/layout_horiz_bookmark"
+            app:layout_constraintBottom_toTopOf="@id/layout_horiz_deactivation"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -161,6 +161,44 @@
                 android:layout_height="match_parent" />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/layout_horiz_deactivation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
+            android:background="@drawable/none_background_click_background"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@id/layout_horiz_bookmark"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layout_horiz_ban"
+            app:layout_constraintWidth_percent="1">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_post_activation" />
+
+            <TextView
+                android:id="@+id/tv_popup_deactivation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="start"
+                android:paddingStart="20dp"
+                android:paddingEnd="0dp"
+                android:text="비활성화"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+
+            <View
+                android:layout_width="20dp"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/layout_horiz_bookmark"
@@ -174,7 +212,7 @@
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layout_horiz_ban">
+            app:layout_constraintTop_toBottomOf="@id/layout_horiz_deactivation">
 
             <ImageView
                 android:id="@+id/imgv_popup_bookmark"
