--- a/Breaking/app/src/main/res/layout/activity_post.xml
+++ b/Breaking/app/src/main/res/layout/activity_post.xml
@@ -31,6 +31,7 @@
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/view_root"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".board.PostActivity">
@@ -117,7 +118,29 @@
                     app:layout_constraintBottom_toTopOf="@+id/divider1">
                 </androidx.recyclerview.widget.RecyclerView>
 
-    <!--            <ProgressBar-->
+                <TextView
+                    android:id="@+id/tv_recycler_image"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    android:text="※ 이미지 동영상 파일은 수정할 수 없습니다 ※"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:background="@drawable/post_input_background"
+                    android:visibility="gone"
+                    app:layout_constraintWidth_percent="0.87"
+                    app:layout_constraintHeight_percent="0.1"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="@+id/tv_upload_picture"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_upload_picture"
+                    app:layout_constraintBottom_toTopOf="@+id/divider1">
+                </TextView>
+
+
+                <!--            <ProgressBar-->
     <!--                android:id="@+id/bar_progress_image"-->
     <!--                android:layout_width="wrap_content"-->
     <!--                android:layout_height="wrap_content"-->
